--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -9,6 +9,7 @@ sound:
 messages:
   console: "&fCommand &cnot executable &fon behalf of &cConsole"
   no-permission: "&fYou &cdon't have permission &fto use the command"
+  link-format: "&fThe link must start from &chttp:// &for &chttps://"
   usage: "&fUsage: &b/live [URL]"
   live-message: |
     
