--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,11 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>jfbdev</groupId>
-  <artifactId>jLive</artifactId>
-  <version>1.3</version>
+  <artifactId>jlivestream</artifactId>
+  <version>1.4</version>
   <packaging>jar</packaging>
 
-  <name>jLive</name>
+  <name>JLiveStream</name>
 
   <properties>
     <java.version>16</java.version>
@@ -23,8 +23,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.1</version>
         <configuration>
-          <source>${java.version}</source>
-          <target>${java.version}</target>
+          <source>16</source>
+          <target>16</target>
         </configuration>
       </plugin>
       <plugin>
