--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,14 +1,14 @@
-name: jLive
-version: '1.3'
-main: jfbdev.jLive.jLive
+name: JLiveStream
+version: '${project.version}'
+main: jfbdev.jlivestream.JLiveStream
 api-version: '1.16'
-authors: [ jFrostyBoy ]
+description: Plugin to announce live streams, fully customizable.
+author: jFrostyBoy
+
 commands:
   live:
-    usage: /<command> [url link]
-    description: Let players know about your stream
-    default: op
-  jlivereload:
-    usage: /<command>
-    description: Reloads the plugin configuration
-    default: op
+    usage: /live <url>
+  livestop:
+    usage: /livestop
+  jlivestreamreload:
+    usage: /jlivestreamreload
